apps/staging/bookmark-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress



spec:
  ingressClassName: traefik
  rules:
    - host: bookmark-stg.manju-labs.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookmark-app-svc
                port:
                  number: 80
